youfull/objects/Sales_Org_Leadership__c.object
<CustomObject>
    <fields>
        <fullName>ACTVTY_PCT__c</fullName>
        <label>ACTVTY_PCT</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AVG_CUST_CNT__c</fullName>
        <label>AVG_CUST_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_MULT_ORD_AMT__c</fullName>
        <label>AVG_MULT_ORD_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AVG_ORD_AMT__c</fullName>
        <label>AVG_ORD_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BLW_MIN_LDRSHP_AWRD_SLS_AMT__c</fullName>
        <label>Total Award  Sales Below Min Amt</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CC_EMPTY_FLD__c</fullName>
        <label>CC_EMPTY_FLD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_TITL_1_STAFF_NET_CHNG__c</fullName>
        <formula>TITL_1_APPT_CNT__c +TITL_1_RNSTMT_CNT__c - TITL_1_RMOVL_CNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC_TITL_1_STAFF_NET_CHNG</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_TITL_2_STAFF_NET_CHNG__c</fullName>
        <formula>TITL_2_APPT_CNT__c +TITL_2_RNSTMT_CNT__c - TITL_2_RMOVL_CNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC_TITL_2_STAFF_NET_CHNG</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_TITL_3_STAFF_NET_CHNG__c</fullName>
        <formula>TITL_3_APPT_CNT__c +TITL_3_RNSTMT_CNT__c - TITL_3_RMOVL_CNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC_TITL_3_STAFF_NET_CHNG</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_UQ_TITL_STAFF_NET_CHNG__c</fullName>
        <formula>UQ_TITL_1_APPT_CNT__c +UQ_TITL_1_RNSTMT_CNT__c - UQ_TITL_1_RMOVL_CNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC_UQ_TITL_STAFF_NET_CHNG</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_ZONE_MGR_STAFF_NET_CHNG__c</fullName>
        <formula>ZONE_MGR_APPT_CNT__c + ZONE_MGR_RNSTMT_CNT__c - ZONE_MGR_RMOVL_CNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC_ZONE_MGR_STAFF_NET_CHNG</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DWNLN_NON_LDR_ABV_MIN_CNT__c</fullName>
        <label>DWNLN_NON_LDR_ABV_MIN_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DWNLN_NON_LDR_ACTVTY_PCT__c</fullName>
        <label>DWNLN_NON_LDR_ACTVTY_PCT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DWNLN_NON_LDR_APPT_CNT__c</fullName>
        <label>DWNLN_NON_LDR_APPT_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DWNLN_NON_LDR_AVG_CUST_CNT__c</fullName>
        <label>DWNLN_NON_LDR_AVG_CUST_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DWNLN_NON_LDR_AWRD_SLS_AMT__c</fullName>
        <label>DWNLN_NON_LDR_AWRD_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DWNLN_NON_LDR_BAD_DEBT_AMT__c</fullName>
        <label>DWNLN_NON_LDR_BAD_DEBT_AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DWNLN_NON_LDR_BAL_DUE_AMT__c</fullName>
        <label>DWNLN_NON_LDR_BAL_DUE_AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DWNLN_NON_LDR_FRST_ORD_CNT__c</fullName>
        <label>DWNLN_NON_LDR_FRST_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DWNLN_NON_LDR_GRP_PD_SLS_AMT__c</fullName>
        <label>DWNLN_NON_LDR_GRP_PD_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DWNLN_NON_LDR_HOLD_ORD_CNT__c</fullName>
        <label>DWNLN_NON_LDR_HOLD_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DWNLN_NON_LDR_MULT_ORD_CNT__c</fullName>
        <label>DWNLN_NON_LDR_MULT_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DWNLN_NON_LDR_NET_SLS_AMT__c</fullName>
        <label>DWNLN_NON_LDR_NET_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DWNLN_NON_LDR_NO_ORD_CNT__c</fullName>
        <label>DWNLN_NON_LDR_NO_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DWNLN_NON_LDR_ORD_CNT__c</fullName>
        <label>DWNLN_NON_LDR_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DWNLN_NON_LDR_ORD_UND_MIN_CNT__c</fullName>
        <label>DWNLN_NON_LDR_ORD_UND_MIN_CNT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DWNLN_NON_LDR_PAST_DUE_AMT__c</fullName>
        <label>DWNLN_NON_LDR_PAST_DUE_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DWNLN_NON_LDR_PEND_ORD_CNT__c</fullName>
        <label>DWNLN_NON_LDR_PEND_ORD_CNT</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DWNLN_NON_LDR_RMOVL_CNT__c</fullName>
        <label>DWNLN_NON_LDR_RMOVL_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DWNLN_NON_LDR_RNSTMT_CNT__c</fullName>
        <label>DWNLN_NON_LDR_RNSTMT_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DWNLN_NON_LDR_RTURN_AMT__c</fullName>
        <label>DWNLN_NON_LDR_RTURN_AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DWNLN_NON_LDR_TOP_SLR_CNT__c</fullName>
        <label>DWNLN_NON_LDR_TOP_SLR_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DWNLN_NON_LDR_UND_MIN_CNT__c</fullName>
        <label>DWNLN_NON_LDR_UND_MIN_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DWNLN_NON_LDR_WO_TOP_SLR_CNT__c</fullName>
        <label>DWNLN_NON_LDR_WO_TOP_SLR_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INACTV_1_CMPGN_DWNLN_NON_LDR_C__c</fullName>
        <label>INACTV_1_CMPGN_DWNLN_NON_LDR_C</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INACTV_1_CMPGN_NON_LDRSHP_CNT__c</fullName>
        <label>INACTV_1_CMPGN_NON_LDRSHP_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INACTV_1_CMPGN_TITL_1_CNT__c</fullName>
        <label>INACTV_1_CMPGN_TITL_1_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INACTV_1_CMPGN_TITL_2_CNT__c</fullName>
        <label>INACTV_1_CMPGN_TITL_2_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INACTV_1_CMPGN_TITL_3_CNT__c</fullName>
        <label>INACTV_1_CMPGN_TITL_3_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INACTV_1_CMPGN_UQ_TITL_1_CNT__c</fullName>
        <label>INACTV_1_CMPGN_UQ_TITL_1_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INACTV_2_CMPGN_DWNLN_NON_LDR_C__c</fullName>
        <label>INACTV_2_CMPGN_DWNLN_NON_LDR_C</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INACTV_2_CMPGN_NON_LDRSHP_CNT__c</fullName>
        <label>INACTV_2_CMPGN_NON_LDRSHP_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INACTV_2_CMPGN_UQ_TITL_1_CNT__c</fullName>
        <label>INACTV_2_CMPGN_UQ_TITL_1_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INACTV_3_CMPGN_DWNLN_NON_LDR_C__c</fullName>
        <label>INACTV_3_CMPGN_DWNLN_NON_LDR_C</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INACTV_3_CMPGN_NON_LDRSHP_CNT__c</fullName>
        <label>INACTV_3_CMPGN_NON_LDRSHP_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INACTV_3_CMPGN_UQ_TITL_1_CNT__c</fullName>
        <label>INACTV_3_CMPGN_UQ_TITL_1_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IN_ZONE_DWNLN_NON_LDR_STF_CNT__c</fullName>
        <label>IN_ZONE_DWNLN_NON_LDR_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IN_ZONE_TITL_1_STF_CNT__c</fullName>
        <label>IN_ZONE_TITL_1_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IN_ZONE_TITL_2_STF_CNT__c</fullName>
        <label>IN_ZONE_TITL_2_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IN_ZONE_TITL_3_STF_CNT__c</fullName>
        <label>IN_ZONE_TITL_3_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IN_ZONE_UQ_TITL_1_STF_CNT__c</fullName>
        <label>IN_ZONE_UQ_TITL_1_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_BRCHR_CNT__c</fullName>
        <label>LDRSHP_BRCHR_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_CUST_CNT__c</fullName>
        <label>LDRSHP_CUST_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_DEMO_ITEM_CNT__c</fullName>
        <label>LDRSHP_DEMO_ITEM_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_INVCD_ORD_CNT__c</fullName>
        <label>LDRSHP_INVCD_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_PEND_ORD_CNT__c</fullName>
        <label>LDRSHP_PEND_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_RTURN_CNT__c</fullName>
        <label>LDRSHP_RTURN_CNT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LDRSHP_SLS_AIDS_CNT__c</fullName>
        <label>LDRSHP_SLS_AIDS_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_WK1_MULT_ORD_CNT__c</fullName>
        <label>LDRSHP_WK1_MULT_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_WK2_MULT_ORD_CNT__c</fullName>
        <label>LDRSHP_WK2_MULT_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_WK3_MULT_ORD_CNT__c</fullName>
        <label>LDRSHP_WK3_MULT_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LRDSHP_WK4_MULT_ORD_CNT__c</fullName>
        <label>LRDSHP_WK4_MULT_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_ID_ZONE_CD_KEY__c</fullName>
        <externalId>true</externalId>
        <label>MRKT_ID_ZONE_CD_KEY</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MRKT_ID__c</fullName>
        <label>MRKT_ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NC_ACTVTY_PCT__c</fullName>
        <label>NC_ACTVTY_PCT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NC_GRP_PD_SLS_AMT__c</fullName>
        <label>NC_GRP_PD_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NC_IN_ZONE_LDRSHP_STF_CNT__c</fullName>
        <label>NC_IN_ZONE_LDRSHP_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_LDRSHP_ABV_MIN_CNT__c</fullName>
        <label>NC_LDRSHP_ABV_MIN_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_LDRSHP_APPT_CNT__c</fullName>
        <label>NC_LDRSHP_APPT_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_LDRSHP_AVG_ORD_AMT__c</fullName>
        <label>NC_LDRSHP_AVG_ORD_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NC_LDRSHP_AWRD_SLS_AMT__c</fullName>
        <label>NC_LDRSHP_AWRD_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NC_LDRSHP_FRST_ORD_CNT__c</fullName>
        <label>NC_LDRSHP_FRST_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_LDRSHP_HOLD_ORD_CNT__c</fullName>
        <label>NC_LDRSHP_HOLD_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_LDRSHP_MULT_ORD_CNT__c</fullName>
        <label>NC_LDRSHP_MULT_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_LDRSHP_NET_SLS_AMT__c</fullName>
        <label>NC_LDRSHP_NET_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NC_LDRSHP_NO_ORD_CNT__c</fullName>
        <label>NC_LDRSHP_NO_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_LDRSHP_ORD_AVG_CUST_CNT__c</fullName>
        <label>NC_LDRSHP_ORD_AVG_CUST_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_LDRSHP_ORD_CNT__c</fullName>
        <label>NC_LDRSHP_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_LDRSHP_PAST_DUE_AMT__c</fullName>
        <label>NC_LDRSHP_PAST_DUE_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NC_LDRSHP_PEND_ORD_CNT__c</fullName>
        <label>NC_LDRSHP_PEND_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_LDRSHP_RMOVL_CNT__c</fullName>
        <label>NC_LDRSHP_RMOVL_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_LDRSHP_RNSTMT_CNT__c</fullName>
        <label>NC_LDRSHP_RNSTMT_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_LDRSHP_RTURN_AMT__c</fullName>
        <label>NC_LDRSHP_RTURN_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NC_LDRSHP_RTURN_CNT__c</fullName>
        <label>NC_LDRSHP_RTURN_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_LDRSHP_TITL_DMTD_CNT__c</fullName>
        <label>NC_LDRSHP_TITL_DMTD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_LDRSHP_TITL_PROMTD_CNT__c</fullName>
        <label>NC_LDRSHP_TITL_PROMTD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_LDRSHP_UND_MIN_CNT__c</fullName>
        <label>NC_LDRSHP_UND_MIN_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_LDRSHP_UPLN_CNT__c</fullName>
        <label>NC_LDRSHP_UPLN_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_NON_LDRSHP_ABV_MIN_CNT__c</fullName>
        <label>NC_NON_LDRSHP_ABV_MIN_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_NON_LDRSHP_FRST_ORD_CNT__c</fullName>
        <label>NC_NON_LDRSHP_FRST_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_NON_LDRSHP_HOLD_ORD_CNT__c</fullName>
        <label>NC_NON_LDRSHP_HOLD_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_NON_LDRSHP_NO_ORD_CNT__c</fullName>
        <label>NC_NON_LDRSHP_NO_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_NON_LDRSHP_ORD_CNT__c</fullName>
        <label>NC_NON_LDRSHP_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_NON_LDRSHP_PEND_ORD_CNT__c</fullName>
        <label>NC_NON_LDRSHP_PEND_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_NON_LDRSHP_RTURN_CNT__c</fullName>
        <label>NC_NON_LDRSHP_RTURN_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_NON_LDRSHP_UND_MIN_CNT__c</fullName>
        <label>NC_NON_LDRSHP_UND_MIN_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_OUT_ZONE_LDRSHP_STF_CNT__c</fullName>
        <label>NC_OUT_ZONE_LDRSHP_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_PRSNL_ORD_ABV_MIN_CNT__c</fullName>
        <label>NC_PRSNL_ORD_ABV_MIN_CNT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_PRSNL_ORD_UND_MIN_CNT__c</fullName>
        <label>NC_PRSNL_ORD_UND_MIN_CNT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NON_LDRSHP_ABV_MIN_CNT__c</fullName>
        <label>NON_LDRSHP_ABV_MIN_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NON_LDRSHP_ANNIV_CNT__c</fullName>
        <label>NON_LDRSHP_ANNIV_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NON_LDRSHP_AWRD_SLS_AMT__c</fullName>
        <label>NON_LDRSHP_AWRD_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NON_LDRSHP_BAD_DEBT_AMT__c</fullName>
        <label>NON_LDRSHP_BAD_DEBT_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NON_LDRSHP_BAL_DUE_AMT__c</fullName>
        <label>NON_LDRSHP_BAL_DUE_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NON_LDRSHP_BRTHDY_CNT__c</fullName>
        <label>NON_LDRSHP_BRTHDY_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NON_LDRSHP_CUST_CNT__c</fullName>
        <label>NON_LDRSHP_CUST_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NON_LDRSHP_HOLD_ORD_CNT__c</fullName>
        <label>NON_LDRSHP_HOLD_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NON_LDRSHP_MULT_ORD_CNT__c</fullName>
        <label>NON_LDRSHP_MULT_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NON_LDRSHP_NET_SLS_AMT__c</fullName>
        <label>NON_LDRSHP_NET_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NON_LDRSHP_NO_ORD_CNT__c</fullName>
        <label>NON_LDRSHP_NO_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NON_LDRSHP_ORD_CNT__c</fullName>
        <label>NON_LDRSHP_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NON_LDRSHP_PAST_DUE_AMT__c</fullName>
        <label>NON_LDRSHP_PAST_DUE_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NON_LDRSHP_PEND_ORD_CNT__c</fullName>
        <label>NON_LDRSHP_PEND_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NON_LDRSHP_RTURN_AMT__c</fullName>
        <label>NON_LDRSHP_RTURN_AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NON_LDRSHP_RTURN_CNT__c</fullName>
        <label>NON_LDRSHP_RTURN_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NON_LDRSHP_STF_CNT__c</fullName>
        <label>NON_LDRSHP_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NON_LDRSHP_TOP_SLR_CNT__c</fullName>
        <label>NON_LDRSHP_TOP_SLR_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NON_LDRSHP_UND_MIN_CNT__c</fullName>
        <label>NON_LDRSHP_UND_MIN_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NON_LDRSHP_WK1_MULT_ORD_CNT__c</fullName>
        <label>NON_LDRSHP_WK1_MULT_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NON_LDRSHP_WK2_MULT_ORD_CNT__c</fullName>
        <label>NON_LDRSHP_WK2_MULT_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NON_LDRSHP_WK3_MULT_ORD_CNT__c</fullName>
        <label>NON_LDRSHP_WK3_MULT_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NON_LDRSHP_WO_TOP_SLR_CNT__c</fullName>
        <label>NON_LDRSHP_WO_TOP_SLR_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NON_LDR_ORD_UND_MIN_CNT__c</fullName>
        <label>NON_LDR_ORD_UND_MIN_CNT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_FAP_Total_Stf__c</fullName>
        <formula>(IN_ZONE_UQ_TITL_1_STF_CNT__c+OUT_ZONE_UQ_TITL_1_STF_CNT__c+IN_ZONE_TITL_1_STF_CNT__c+OUT_ZONE_TITL_1_STF_CNT__c+IN_ZONE_TITL_2_STF_CNT__c+OUT_ZONE_TITL_2_STF_CNT__c+IN_ZONE_TITL_3_STF_CNT__c+OUT_ZONE_TITL_3_STF_CNT__c+IN_ZONE_TITL_4_STF_CNT__c+OUT_ZONE_TITL_4_STF_CNT__c+IN_ZONE_TITL_5_STF_CNT__c+OUT_ZONE_TITL_5_STF_CNT__c+IN_ZONE_DWNLN_NON_LDR_STF_CNT__c+OUT_ZONE_DWNLN_NON_LDR_STF_CNT__c) -  (Sales_Org_Ldrship_MktTags__r.DWNLN_NON_LDR_REP_WITH_FAP_CNT__c+Sales_Org_Ldrship_MktTags__r.TITL_1_REP_WITH_FAP_CNT__c+Sales_Org_Ldrship_MktTags__r.TITL_2_REP_WITH_FAP_CNT__c+Sales_Org_Ldrship_MktTags__r.TITL_3_REP_WITH_FAP_CNT__c+Sales_Org_Ldrship_MktTags__r.TITL_4_REP_WITH_FAP_CNT__c+Sales_Org_Ldrship_MktTags__r.TITL_5_REP_WITH_FAP_CNT__c+Sales_Org_Ldrship_MktTags__r.UQ_TITL_1_REP_WITH_FAP_CNT__c)</formula>
        <label>No FAP Total Stf</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPERTNL_CMPGN_NR__c</fullName>
        <label>OPERTNL_CMPGN_NR</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUT_ZONE_DWNLN_NON_LDR_STF_CNT__c</fullName>
        <label>OUT_ZONE_DWNLN_NON_LDR_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUT_ZONE_TITL_1_STF_CNT__c</fullName>
        <label>OUT_ZONE_TITL_1_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUT_ZONE_TITL_2_STF_CNT__c</fullName>
        <label>OUT_ZONE_TITL_2_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUT_ZONE_TITL_3_STF_CNT__c</fullName>
        <label>OUT_ZONE_TITL_3_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUT_ZONE_UQ_TITL_1_STF_CNT__c</fullName>
        <label>OUT_ZONE_UQ_TITL_1_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAST_DUE_REP_CNT__c</fullName>
        <label>PAST_DUE_REP_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_ACTVTY_PCT__c</fullName>
        <label>PC_ACTVTY_PCT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_AVG_MULT_ORD_AMT__c</fullName>
        <label>PC_AVG_MULT_ORD_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_BLW_MIN_LDRSHP_AWRD_SLS_AMT__c</fullName>
        <label>PC Total Award Sales Below Min Amt</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_DWNLN_NON_LDR_AWRD_SLS_AMT__c</fullName>
        <label>PC_DWNLN_NON_LDR_AWRD_SLS_AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_GRP_PD_SLS_AMT__c</fullName>
        <label>PC_GRP_PD_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_IN_ZONE_LDRSHP_STF_CNT__c</fullName>
        <label>PC_IN_ZONE_LDRSHP_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_ABV_MIN_CNT__c</fullName>
        <label>PC_LDRSHP_ABV_MIN_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_APPT_CNT__c</fullName>
        <label>PC_LDRSHP_APPT_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_AVG_ORD_AMT__c</fullName>
        <label>PC_LDRSHP_AVG_ORD_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_AWRD_SLS_AMT__c</fullName>
        <label>PC_LDRSHP_AWRD_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_BRCHR_CNT__c</fullName>
        <label>PC_LDRSHP_BRCHR_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_CUST_CNT__c</fullName>
        <label>PC Total Customer Cnt</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_DEMO_ITEM_CNT__c</fullName>
        <label>PC_LDRSHP_DEMO_ITEM_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_ERNGS_AMT__c</fullName>
        <label>PC_LDRSHP_ERNGS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_FRST_ORD_CNT__c</fullName>
        <label>PC_LDRSHP_FRST_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_HOLD_ORD_CNT__c</fullName>
        <label>PC_LDRSHP_HOLD_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_INVCD_ORD_CNT__c</fullName>
        <label>PC_LDRSHP_INVCD_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_MULT_ORD_CNT__c</fullName>
        <label>PC_LDRSHP_MULT_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_NET_SLS_AMT__c</fullName>
        <label>PC_LDRSHP_NET_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_NO_ORD_CNT__c</fullName>
        <label>PC_LDRSHP_NO_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_ORD_AVG_CUST_CNT__c</fullName>
        <label>PC_LDRSHP_ORD_AVG_CUST_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_ORD_CNT__c</fullName>
        <label>PC_LDRSHP_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_OUT_ZONE_STF_CNT__c</fullName>
        <label>PC_LDRSHP_OUT_ZONE_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_PAST_DUE_AMT__c</fullName>
        <label>PC_LDRSHP_PAST_DUE_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_PEND_ORD_CNT__c</fullName>
        <label>PC_LDRSHP_PEND_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_RMOVL_CNT__c</fullName>
        <label>PC_LDRSHP_RMOVL_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>